--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
         <h1>Sorted Contacts</h1>
     </header>
     <main>
+        <p> Sort on:
+            <select id="sort-select">
+                <option disabled selected value=""></option>
+                <option value="firstName">First Name</option>
+                <option value="lastName">Last Name</option>
+                <option value="isActive">Active</option>
+                <option value="balance">Balance</option>
+                <option value="age">Age</option>
+                <option value="email">Email</option>
+                <option value="company">Company</option>
+                <option value="favoriteFruit">Favorite Fruit</option>
+            </select>
+        </p>
     <table>
         <thead>
             <tr>
